# sloopquest

./: .gitignore  .pre-commit-config.yaml  ABSTRACTIONS.md  CLAUDE.md  Justfile  README.md
backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260101_0000_init_0000000000000.py  20260505_0602_add_tasks_table_e916c431c32c.py  20260505_0638_add_comms_email_tables_7e279f9a5e2e.py  20260505_0700_add_state_transition_logs_e159feb64f82.py  20260505_0730_add_events_tables_a31bf7c2419d.py  20260505_0900_add_llm_threads_and_messages_d2e3f4a5b6c7.py  20260505_0930_add_users_orgs_magic_link_tokens_e3f4a5b6c7d8.py  20260507_0541_add_stripe_fields_fbefce69c3d1.py  20260508_0222_add_all_domain_models_e229da637a4b.py  20260508_0304_form_dsl_columns_3c34a332c09d.py  20260508_0443_add_manufacturers_and_parts_37398e55ba31.py  20260509_1940_survey_model_simplification_cf45d5db283e.py  20260510_0345_add_search_vectors_9ba7aed24094.py  (+39 more)
backend/app/: config.py  factory.py  index.py
backend/email_templates/: .gitignore  package.json  pnpm-lock.yaml
backend/pdf_templates/: package.json  pnpm-lock.yaml
backend/scripts/: start.sh
backend/tests/: test_actions.py  test_calendar_events_actions.py  test_calendar_events_rls.py  test_calendar_events_routes.py  test_calendar_events_state_machine.py  test_crud.py  test_events.py  test_extraction.py  test_inbox_list.py  test_inbox_routing.py  test_infrastructure.py  test_llm.py  test_manufacturer_vessel_extractors.py  test_messages.py  test_search.py  test_sqids.py  test_state_machine.py  test_survey_import.py  test_template_matching.py
(+727 files in other folders)
