[project]
name = "sloopquest"
version = "0.1.0"
description = "Sloopquest backend API"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "litestar[standard,sqlalchemy]",
  "sqlalchemy",
  "psycopg[binary]",
  "psycopg2-binary",
  "alembic",
  "alembic-utils",
  "python-dotenv",
  "uvicorn",
  "litestar-saq>=0.1.6",
  "saq>=0.25.2",
  "redis>=5.0",
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "aioboto3>=13.0.0",
  "boto3>=1.35",
  "Pillow>=10.0",
  "email-validator>=2.0",
  "jinja2",
  "msgspec",
  "pydantic",
  "sqids>=0.5.0",
  "stripe>=10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.9",
  "basedpyright>=1.23",
  "polyfactory>=3.3.0",
  "faker>=30.0",
  "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "PLC",
]

[tool.ruff.lint.per-file-ignores]
"app/index.py"           = ["E402", "I001"]
"alembic/env.py"         = ["E402"]
"alembic/versions/*.py"  = ["E501", "W291", "UP035"]
"app/config.py"          = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.basedpyright]
typeCheckingMode = "basic"
ignore = ["alembic/versions"]
reportIncompatibleMethodOverride = "error"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
